# cat_dog_class

./: .pre-commit-config.yaml  infer.py  pyproject.toml  train.py
cat_dog_class/: infer.py  model_real.py  train.py
