[tool.poetry]
name = "cat-dog-class"
version = "0.1.0"
description = "Create model for cat and dog classification"
authors = ["BabkenBrs <brsikyanbabken99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
flake8 = "^6.1.0"
black = "^23.9.1"
numpy = "^1.26.0"
matplotlib = "^3.8.0"
torch = "^2.0.1"
torchvision = "^0.15.2"
scikit-learn = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
