[tool.poetry]
name = "cat-dog-class"
version = "0.1.0"
description = ""
authors = ["BabkenBrs <brsikyanbabken99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
torch = "2.0.0"
torchvision = "0.15.1"
black = "^23.9.1"
flake8 = "^6.1.0"
numpy = "^1.26.0"
matplotlib = "^3.8.0"
tqdm = "^4.66.1"
scikit-learn = "^1.3.1"
ipython = "^8.16.1"
pandas = "^2.1.1"
wget = "^3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
